# meesign-server

./: .dockerignore  .gitignore  ARCHITECTURE.md  Cargo.toml  Dockerfile  README.md  build.rs  compose.base.yaml  compose.deploy.yaml  diesel.toml  docker-compose.dev.yaml  flake.nix  generate_certificates.sh  generate_db_credentials.sh  generate_keys.sh  meesign.proto  run_integration_tests.sh
.github/workflows/: docker-nightly.yml  docker.yml  rust.yml
docs/diagrams/: meesign-erd.plantuml
integration-tests/: .env  Dockerfile.test_client  compose.yaml
integration-tests/keys/: meesign-ca-cert.pem  meesign-ca-cert.srl  meesign-ca-key.pem  meesign-server-cert.pem  meesign-server-key.pem
migrations/2023-09-14-105612_create_enums/: down.sql  up.sql
migrations/2023-09-14-110756_create_device/: down.sql  up.sql
migrations/2023-09-14-110947_create_group/: down.sql  up.sql
migrations/2023-09-14-110947_create_signing_group/: down.sql  up.sql
migrations/2023-09-14-111432_create_group_participant/: down.sql  up.sql
migrations/2023-09-14-111737_create_task_result/: down.sql  up.sql
migrations/2023-09-14-112003_create_task/: down.sql  up.sql
migrations/2023-09-14-112003_create_task_task/: down.sql  up.sql
migrations/2023-09-14-112004_create_task_result/: up.sql
migrations/2024-04-25-223246_create_task_participant/: down.sql  up.sql
migrations/2025-05-25-190531_add_group_task_certificates_flag/: down.sql  up.sql
migrations/2025-08-14-141946_add_musig2_protocol_type/: down.sql  up.sql
migrations/2025-08-27-171451_initial_schema/: down.sql  up.sql
proto/: meesign.proto  mpc.proto
src/: cached_task_store.rs  communicator.rs  device.rs  error.rs  group.rs  main.rs  persistence.rs  rpc.rs  state.rs  task.rs  task_store.rs  utils.rs
src/interfaces/: grpc.rs  mod.rs  timer.rs  web.rs
src/interfaces/web/: dashboard.html
src/persistence/: enums.rs  error.rs  meesign_repo.rs  models.rs  persistance_error.rs  postgres_meesign_repo.rs  postgres_repository.rs  repository.rs  schema.rs  tests.rs
src/persistence/postgres_meesign_repo/: device.rs  group.rs  task.rs  utils.rs
src/persistence/postgres_repository/: device.rs  group.rs  task.rs
src/persistence/repository/: device.rs  group.rs  task.rs  utils.rs
src/persistence/tests/: connection_error.rs  db_context.rs  persistency_unit_test_context.rs
src/protocols/: elgamal.rs  frost.rs  gg18.rs  mod.rs  musig2.rs
src/protocols/gg18/: gg18_key_gen.rs  gg18_sign.rs  mod.rs
src/tasks/: decrypt.rs  group.rs  mod.rs  sign.rs  sign_challenge.rs  sign_pdf.rs
