[package]
name = "meesign-server"
version = "0.5.0"
edition = "2021"

[dependencies]
tonic = { version = "0.10", features = ["transport", "tls"] }
prost = "0.12"
tokio = { version = "1.33", features = ["macros", "rt-multi-thread", "time", "fs"] }
tokio-stream = "0.1.14"
uuid = { version = "1.4.1", features = ["v4", "fast-rng"] }
log = "0.4.16"
env_logger = "0.9.0"
hex = "0.4.3"
clap = { version = "3.1.8", features = ["derive"] }
rand = "0.8.5"
tempfile = "3.3.0"
lazy_static = "1.4.0"
openssl = "0.10.60"
sha2 = "0.10.6"
meesign-crypto = { git = "https://github.com/crocs-muni/meesign-crypto", rev = "b0e7f14", default-features = false, features = ["elgamal-encrypt"] }
diesel = { version = "2.1.0", features = ["postgres", "chrono"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
diesel-async = { version = "0.4.1", features = ["postgres", "deadpool"] }
diesel_migrations = "2.1.0"
deadpool = "0.9.5"
dotenvy = "0.15"
chrono = "0.4.30"
thiserror = "1.0.58"

[build-dependencies]
tonic-build = "0.10"

[features]
default = ["cli"]
cli = []
